Splitted the single view into separate views. Done loads into the corresponding tabs